fix: align textfield css with spectrum-css

--- a/1st-gen/packages/field-label/src/field-label-mixin.css
+++ b/1st-gen/packages/field-label/src/field-label-mixin.css
@@ -67,6 +67,10 @@ label {
     -moz-osx-font-smoothing: auto;
     color: var(--highcontrast-field-label-content-color, var(--mod-fieldlabel-color, var(--spectrum-neutral-subdued-content-color-default)));
     display: inline-block;
+
+    /* styles from .spectrum-FieldLabel */
+    grid-row: 1;
+    grid-column: 1 / span 1;
 }
 
 label[hidden] {
@@ -89,6 +93,23 @@ label:lang(zh) {
     margin-inline: var(--mod-field-label-text-to-asterisk, var(--spectrum-field-label-text-to-asterisk)) 0;
     vertical-align: initial;
     vertical-align: var(--mod-field-label-asterisk-vertical-align, baseline);
+}
+
+:host([side-aligned="start"]) label,
+:host([side-aligned="end"]) label {
+    vertical-align: top;
+    margin-block-start: var(--mod-fieldlabel-side-margin-block-start, var(--spectrum-field-label-side-margin-block-start));
+    margin-block-end: 0;
+    margin-inline-end: var(--mod-fieldlabel-side-padding-right, var(--spectrum-field-label-side-padding-right));
+    display: inline-block;
+
+    /* styles from .spectrum-Textfield--sideLabel */
+    grid-row: 1 / span 2;
+    grid-column: 1 / span 1;
+}
+
+:host([side-aligned="end"]) label {
+    text-align: end;
 }
 
 @media (forced-colors: active) {
